# project1_Poley_Evgeny_M25-555

./: .gitignore  README.md  pyproject.toml
labyrinth/: constants.py  main.py  player_actions.py  utils.py
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
